# jsonrpcsvr1

./: .gitignore  GEMINI.md  README.md  RefactoringPlan1.md  archive_file.py  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_purpose.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
archives/: 20250926-060558-Tasks-done.md  20250926-073100-Tasks-done.md  20250926-073153-Plan-sample2-done.md
samples/: sample1-client.py  sample2-client.py
src/jsonrpcsvr1/: __init__.py  __main__.py  json_api.py  utils.py
src/jsonrpcsvr1/funcs/: calc.py  echo.py
src/jsonrpcsvr1/utils/: debug_env.py  debug_log_env.py
