[project]
name = "jsonrpcsvr1"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "fastapi-jsonrpc>=3.4.1",
    "pyclickutils",
    "uvicorn>=0.37.0",
]

[project.scripts]
jsonrpcsvr1 = "jsonrpcsvr1.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pyclickutils = { path = "../pyclickutils" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pyright>=1.1.405",
    "requests>=2.32.5",
    "ruff>=0.13.1",
]
