[project]
name = "jsonrpcsvr1"
dynamic = ["version"]
description = "JSON-RPC server"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "fastapi-jsonrpc>=3.4.1",
    "pyclickutils",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.37.0",
]

[project.scripts]
jsonrpcsvr1 = "jsonrpcsvr1.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
pyclickutils = { path = "../pyclickutils" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pyright>=1.1.405",
    "requests>=2.32.5",
    "ruff>=0.13.1",
    "black>=25.9.0",
    "isort>=6.0.1",
]
